--- a/test1/templates/booktest/show.html
+++ b/test1/templates/booktest/show.html
@@ -7,7 +7,7 @@
 <body>
 <ul>
     {%for hero in hero_list%}
-    <li>{{hero.hname}}</li>
+    <li>英雄名：{{hero.hname}}</li>
     {%endfor%}
 </ul>
 </body>
